Juventus Component has been added in the project. It's connected with state and date information to show if we have a game at needed day. Consequently Preloader and Fill Calendar subscribers have been corrected also.

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,14 @@
                 <div class='weather__content'></div>
             </div>
 
+            <h2 class='juventus__header'>Information about FC Juventus</h2>
+            <div class='juventus'>
+                <div class='juventus__content'>
+                    <h3 class='juventus__header3'>Next game:</h3>
+                    <div class='juventus__next-game'></div>
+                </div>
+            </div>
+            
             <div class='todo__tasks'>
                 <div class='modal-button'>
                     <button class='modal-button__button'>add a new task</button>
@@ -55,14 +63,14 @@
                         <button class='todo__tasks__button'></button>
                     </li>
                 </ol>
-                
+
                 <h2 class='todo__header2'>Today's done's tasks</h2>
                 <ul class='todo__tasks__list' id="todo__tasks__done">
                     <li class='todo__tasks__item'>
                         <span>{props.task}</span>
                         <button class='todo__tasks__button todo__tasks__button_delete'></button>
                         <button class='todo__tasks__button todo__tasks__button_done'></button>
-                        <button class='todo__tasks__button todo__tasks__button_correct'></button>                        
+                        <button class='todo__tasks__button todo__tasks__button_correct'></button>
                     </li>
                 </ul>
             </div>
