Juventus component has been bound with the Calendar and the Tasks List Components. There are appeared icons describing days of the games in the Calendar and games events is added in the Tasks List. The Juventus Component is on grid layout system now. There are also has been made some changes to arise downloading speed of the application.

--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,7 @@
 
             <h2 class='juventus__header'>Information about FC Juventus</h2>
             <div class='juventus'>
-                <div class='juventus__content'>
-                    <h3 class='juventus__header3'>Next game:</h3>
-                    <div class='juventus__next-game'></div>
-                </div>
+                <div class='juventus__content'></div>
             </div>
             
             <div class='todo__tasks'>
