Buttons for changing of monthes and years have been added in Calendar. Consequently changed fillip for dates changing. Icons have been added in project in Calendar and TaskList Components. Subscribe file for filling Calendar has been changed

--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,15 @@
                     <thead>
                         <tr>
                             <th class='todo__table__data todo__table__data_header'>
-                                left </th>
+                                <span class="icon-undo2"></span></th>
                             <th class='todo__table__data todo__table__data_header'>
-                                l </th>
+                                <span class="icon-arrow-left2"></span></th>
                             <th class='todo__table__data todo__table__data_header' colSpan='3'
                                 id='table-header-year-month'></th>
                             <th class='todo__table__data todo__table__data_header'>
-                                r </th>
+                                <span class="icon-arrow-right2"></span></th>
                             <th class='todo__table__data todo__table__data_header'>
-                                right</th>
+                                <span class="icon-redo2"></span></th>
                         </tr>
                     </thead>
                     <tbody id='table-body'></tbody>
